k8s/networkpolicy/ingress-def.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: deny-all-ingress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Ingress
